# dmp-ai-analyzer

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.node.json
code/CrashDumpDemo/App/: CrashDump_20260628_021419_report.md
crates/dmp-cli/: Cargo.toml
crates/dmp-cli/src/: args.rs  main.rs
crates/dmp-cli/tests/: cli_tests.rs
crates/dmp-context/: Cargo.toml
crates/dmp-context/src/: lib.rs
crates/dmp-core/: Cargo.toml
crates/dmp-core/src/: lib.rs
crates/dmp-core/tests/: integration_tests.rs  real_dmp_tests.rs
crates/dmp-core/tests/common/: mod.rs
crates/dmp-engine/: Cargo.toml
crates/dmp-engine/src/: ai.rs  cache.rs  cdb.rs  diff.rs  lib.rs  report.rs  template.rs
crates/dmp-ffi/: Cargo.toml
crates/dmp-ffi/src/: lib.rs
crates/dmp-parser/: Cargo.toml
crates/dmp-parser/src/: lib.rs
crates/dmp-py/: Cargo.toml
crates/dmp-py/src/: lib.rs
docs/: backlog.md  ui-architecture.md  user-manual.md
mvp/: __init__.py  __main__.py  ai_client.py  batch.py  cache_manager.py  cdb_runner.py  cli.py  context.py  diff.py  memory_analyzer.py  parser.py  reporter.py  template_selector.py
mvp/collectors/: __init__.py  base.py  binary_collector.py  config_collector.py  dmp_collector.py  eventlog_collector.py  log_collector.py  source_collector.py  symbol_collector.py
mvp/prompt_templates/: access_violation.md  clr_exception.md  divide_by_zero.md  generic.md  memory.md  stack_overflow.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DropZone.tsx  OptionsPanel.tsx  ResultView.tsx
src/styles/: index.css
tests/: test_ai_client.py  test_batch.py  test_binary_collector.py  test_cache_manager.py  test_cdb_runner.py  test_cli.py  test_context.py  test_diff.py  test_log_collector.py  test_memory_analyzer.py  test_parser.py  test_reporter.py
