[package]
name = "dmp-core"
version.workspace = true
edition.workspace = true
description = "Batch orchestration and public analyze() API"

[dependencies]
dmp-context = { path = "../dmp-context" }
dmp-parser = { path = "../dmp-parser" }
dmp-engine = { path = "../dmp-engine" }
serde_json = "1"
rayon = { version = "1", optional = true }

[features]
default = []
parallel = ["dep:rayon"]
