[package]
name = "dmp-engine"
version.workspace = true
edition.workspace = true
description = "CDB runner, cache, AI client, report generation, templates, diff"

[dependencies]
dmp-context = { path = "../dmp-context" }
dmp-parser = { path = "../dmp-parser" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
http = ["dep:reqwest"]

[dependencies.reqwest]
version = "0.12"
features = ["blocking", "json"]
optional = true
